Fri Jul 16 12:14:57 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in libexslt/crypto.c libexslt/exslt.[ch] 
	  libexslt/exsltconfig.h.in win32/configure.js: apply patch from
	  Rob Richards to add a normal --with-crypto configure option.

Tue Jul 13 22:57:43 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* libxslt/functions.c: added some logic to xsltKeyFunction
	  to set the transform context doc ptr when the xpath context
	  doc is different (bug 147445)
	* tests/exslt/common/Makefile.am, tests/exslt/common/node-set.5*
	  and tests/exslt/common/node-set.6*: added regression tests
	  for bug 145547 (UNION and FILTER for RVT's)

Mon Jul 12 08:28:07 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* python/libxslt-python-api.xml: fixed type for doctypeSystem
	  and doctypePublic (problem reported on the list by Sitsofe
	  Wheeler)
	* doc/libxslt-api.xml: updated database.

Sun Jul 11 22:46:31 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* transform.c: small change to key handling for RVT, needed
	  because of enhancement to libxml2 xpath.

Fri Jul  9 02:51:38 PDT 2004 Daniel Veillard <daniel@veillard.com>

	* python/libxsl.py: fixes Python on 64bits box problem.

Tue Jul  6 18:43:37 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in: better python dependancy Red hat bug #126364
	  by Robert Scheck

Tue Jul  6 21:35:44 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* tests/namespaces/Makefile.am: added extra2.err, tst5.xml,
	  tst5.xsl and tst.out to EXTRA_DIST

Mon Jul  5 21:48:13 CEST 2004 Daniel Veillard <daniel@veillard.com>

	* configure.in doc/*: releasing 1.1.8

Sun Jul  4 24:18:12 HKT 2004 William Brack <wbrack@mmm.com.hk>

	* xsltproc/Makefile.am: changed the sequence of LD_ADDS and
	  LIBGCRYPT_LIBS on xsltproc_LDADD.  Previously this was
	  causing the wrong libs to be linked when using the configure
	  option --with-libxml-libs-prefix, or --with-libxml-src (nasty)

Sun Jul  4 21:42:48 HKT 2004 William Brack <wbrack@mmm.com.hk>
